# HFT_QR_RL

./: .gitignore  LICENSE  Makefile  README.md  checkout_branches.sh  convert_notebooks.py  janis_requirements.txt  launch.sh  list.txt  pyproject.toml  requirements.txt  submit_job.sh  tach.toml
data/: script.py  smash_download.py  vizualization.py
data/Data_order_book_premiere_analyse/: Visualisation_data.ipynb  Visualisation_data_jpy.py  imbalance.ipynb  summary_statistics.ipynb  summary_statistics_jpy.py
data/MBO-10 analyse/Notebooks/: Analysembo.ipynb  Analysembo_jpy.py
data/MBO-10 analyse_2/Notebook/: 1j.ipynb  1j_.ipynb  1j__jpy.py  1j_jpy.py  Analyse_final copy.ipynb  Analyse_final copy_jpy.py  Analyse_final.ipynb  Analyse_final_jpy.py  Imbalance&Intensités.ipynb  Imbalance&Intensités_GOOGL.ipynb  Imbalance&Intensités_GOOGL_jpy.py  Imbalance&Intensités_KHL.ipynb  Imbalance&Intensités_KHL_jpy.py  WALA.ipynb  (+14 more)
data/analysis4/: analyze_events.py  requirements.txt
data/deprecated/: script.py  smash_download.py  vizualization.py
data/likelihood/: calculate_intensities.py  calibrate.py  dataframe_transform.py  events_time_distributions.py  forward_price_for_ood_events.py  global_stats_on_metrics.py  main.py  points_stats.py  points_stats_conditionned_spread.py  ranking_intensities_normalized.py  sliding_windows_normalized_intensities.py
data/mboanalyse3/: Analyse_final copy.ipynb  Analyse_final.ipynb  Imbalance&Intensités_GOOGL SL.ipynb  Imbalance&Intensités_KHL SL.ipynb  Imbalance&Intensités_LCID.ipynb  WALA.ipynb  events_extremes.ipynb  events_rares.py  visu_imbalance.py
data/smash/: Status.csv  TBBO.csv  Trade.csv
former/qr/: Code_simu_strat.py
frontend/: app.py  index.html  install.sh  package-lock.json  package.json  run.sh  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
hft_qr_rl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
logs/: 1367856_job_test_gpu.err  1367856_job_test_gpu.out  1367892_job_test_gpu.err  1367892_job_test_gpu.out
models/QR/: MBP1.py  QR-1.py
models/QR model I/: QR-1.py  model_I.ipynb
models/QR1/: QR-1.py  model_I.ipynb  model_I_jpy.py
notebooks/: plotallday.ipynb  plotallday_jpy.py  pyg_walker_PLSL.ipynb  pygwalker.ipynb  pygwalker_jpy.py  remote.ipynb
reports/: rendu1.typ
reports/beamer/: beamer.tex
reports/overleaf2/: main.tex
reports/overleaf3/: main.tex
tests/: cuda.py  gpu_cholesky.py  test_cuda.py  test_debug.py  test_env.py
tests/bash/: check_gpu_status.sh
(+508 files in other folders)
