[tool.poetry]
name = "HFT_QR_RL"
version = "0.1.0"
description = "Application de l'apprentissage par renforcement pour le contrôle optimal des files d'attente QR réactives dans le trading haute fréquence"
authors = ["Janis Aiad"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.26.0"
pandas = "1.3.3"
matplotlib = "3.4.3"
seaborn = "0.11.2"
matplotlib-terminal = "0.1a4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
