[project]
name = "hft-qr-rl"
version = "0.1.0"
description = "Application de l'apprentissage par renforcement pour le contrôle optimal des files d'attente QR réactives dans le trading haute fréquence"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "databento>=0.23.1",
    "flask-cors>=5.0.0",
    "flask>=3.0.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.8.4",
    "nbformat>=5.10.4",
    "numpy==1.24.0",
    "pandas>=2.0.3",
    "plotly>=5.24.1",
    "polars[cuda]>=1.12.0",
    "psutil>=6.1.0",
    "pyarrow>=18.0.0",
    "pytest>=8.3.3",
    "requests>=2.32.3",
    "ruff>=0.7.1",
    "scikit-learn>=1.5.2",
    "seaborn>=0.12.1",
    "setuptools>=75.3.0",
    "tach>=0.14.1",
    "tqdm>=4.66.6",
]



[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"QR1" = "models/QR1/", "QR2" = "models/QR2/"}
packages = ["QR1", "QR2"]



[tool.setuptools.package-data]
"*" = ["*.py", "*.pyi", "*.c", "*.h", "*.cpp", "*.hpp"]
