[project]
name = "hft-qr-rl"
version = "0.1.0"
description = "Application de l'apprentissage par renforcement pour le contrôle optimal des files d'attente QR réactives dans le trading haute fréquence"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
   "databento>=0.45.0",
   "flask>=3.1.0",
   "ipykernel>=6.29.5",
   "matplotlib>=3.9.2",
   "plotly>=5.24.1",
   "polars==1.6.0",
   "pyarrow>=18.0.0",
   "pytest>=8.3.3",
   "ruff>=0.8.0",
   "scikit-learn>=1.5.2",
   "seaborn>=0.13.2",
   "tqdm>=4.67.0",
]



[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"QR1" = "models/QR1/", "QR2" = "models/QR2/"}
packages = ["QR1", "QR2"]



[tool.setuptools.package-data]
"*" = ["*.py", "*.pyi", "*.c", "*.h", "*.cpp", "*.hpp"]
